--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
+backports.functools-lru-cache==1.5
+cycler==0.10.0
 httplib2==0.10.3
+kiwisolver==1.0.1
+matplotlib==2.2.2
 numpy==1.14.2
 oauth2==1.9.0.post1
 pandas==0.22.0
+pyparsing==2.2.0
 python-dateutil==2.7.2
 pytz==2018.4
+scikit-learn==0.19.1
+scipy==1.0.1
 six==1.11.0
+sklearn==0.0
+subprocess32==3.2.7
+xgboost==0.71
